# pydantic-bigstitcher

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md
docs/api/: pydantic_bigstitcher.md  transform.md
src/pydantic_bigstitcher/: __init__.py  transform.py  transforms.py
tests/: conftest.py  test_models.py
tests/fixture/: bigstitcher_0.xml  bigstitcher_1.xml  bigstitcher_2.xml  bigstitcher_3.xml  bigstitcher_4.xml  bigstitcher_5.xml  bigstitcher_6.xml
