[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-bigstitcher"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Davis Vann Bennett", email = "davis.v.bennett@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic-xml>=2.9.2",
  "numpy"
  ]

[project.urls]
Documentation = "https://github.com/unknown/pydantic-bigstitcher#readme"
Issues = "https://github.com/unknown/pydantic-bigstitcher/issues"
Source = "https://github.com/unknown/pydantic-bigstitcher"

[tool.hatch.version]
path = "src/pydantic_bigstitcher/__about__.py"

[tool.hatch.envs.test]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "xmldiff",
  "xmltodict"
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
run-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic_bigstitcher tests}"

[tool.coverage.run]
source_pkgs = ["pydantic_bigstitcher", "tests"]
branch = true
parallel = true
omit = [
  "src/pydantic_bigstitcher/__about__.py",
]

[tool.coverage.paths]
pydantic_bigstitcher = ["src/pydantic_bigstitcher", "*/pydantic-bigstitcher/src/pydantic_bigstitcher"]
tests = ["tests", "*/pydantic-bigstitcher/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
