[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-bigstitcher"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Davis Vann Bennett", email = "davis.v.bennett@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic-xml>=2.9.2",
  "numpy"
  ]

[project.urls]
Documentation = "https://github.com/d-v-b/pydantic-bigstitcher#readme"
Issues = "https://github.com/d-v-b/pydantic-bigstitcher/issues"
Source = "https://github.com/d-v-b/pydantic-bigstitcher"

[project.optional-dependencies]
test = [
  "coverage[toml]>=6.5",
  "pytest",
  "xmldiff",
  "xmltodict",
  "deepdiff==8.0.1"
]

docs = [
  "mkdocs-material>=9.5.39", 
  "mkdocstrings[python]>=0.26.1"
  ]

[tool.hatch.version]
path = "src/pydantic_bigstitcher/__about__.py"

[tool.hatch.envs.test]
features = ["test"]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"
run-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
"serve" = "mkdocs serve"
"build" = "mkdocs build"
"deploy" = "mkdocs gh-deploy"

[[tool.hatch.envs.all.matrix]]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pydantic_bigstitcher tests}"

[tool.coverage.run]
source_pkgs = ["pydantic_bigstitcher", "tests"]
branch = true
parallel = true
omit = [
  "src/pydantic_bigstitcher/__about__.py",
]

[tool.coverage.paths]
pydantic_bigstitcher = ["src/pydantic_bigstitcher", "*/pydantic-bigstitcher/src/pydantic_bigstitcher"]
tests = ["tests", "*/pydantic-bigstitcher/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
namespace_packages = false
strict=true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.ruff]
line-length = 100
force-exclude = true
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "notebooks", # temporary, until we achieve compatibility with ruff ≥ 0.6
    "venv",
    "docs",
]
[tool.ruff.lint]                                                           
    extend-select = [                                                          
      "B",  # flake8-bugbear
      "I",  # isort
      "UP",  # pyupgrade                                                    
    ] 


[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"] 
filterwarnings = ["error"] 